kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astronet
  labels:
    name: astronet
    environment: production
